Fix main heading alignment

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body > header {
   text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   text-align: right;
 }
 
